@@ -14,8 +14,20 @@
 	<name>backend</name>
 	<description>Backend for CampConnect</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
+		<lombok.version>1.18.36</lombok.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.36</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -33,10 +45,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -89,14 +106,29 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<testIncludes>
-						<testInclude>**/delivery/service/DeliveryServiceTest.java</testInclude>
-						<testInclude>**/delivery/controller/DeliveryControllerTest.java</testInclude>
-						<testInclude>**/gear/service/GearServiceTest.java</testInclude>
-						<testInclude>**/gear/controller/GearControllerTest.java</testInclude>
-						<testInclude>**/service/UserServiceTest.java</testInclude>
-						<testInclude>**/controller/UserControllerTest.java</testInclude>
-					</testIncludes>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
+					<includes>
+						<include>**/delivery/service/DeliveryServiceTest.java</include>
+						<include>**/delivery/controller/DeliveryControllerTest.java</include>
+						<include>**/gear/service/GearServiceTest.java</include>
+						<include>**/gear/controller/GearControllerTest.java</include>
+						<include>**/service/UserServiceTest.java</include>
+						<include>**/controller/UserControllerTest.java</include>
+						<include>**/controller/GroupDecisionControllerTest.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
